# nimbro-op-ros

./: LICENSE  README.md
src/nimbro/behaviour/soccer_behaviour/: CMakeLists.txt  package.xml
src/nimbro/behaviour/soccer_behaviour/include/soccer_behaviour/: soccer_behaviour.h  soccer_common.h  soccer_utilities.h
src/nimbro/behaviour/soccer_behaviour/include/soccer_behaviour/control_layer/: control_head.h  control_layer.h  dribble.h  game_control.h  go_behind_ball.h  kick.h  scoop_kick.h  search_for_ball.h
src/nimbro/behaviour/soccer_behaviour/include/soccer_behaviour/ros_interface_layer/: ros_interface_layer.h
src/nimbro/behaviour/soccer_behaviour/include/soccer_behaviour/soccer_layer/: play_soccer.h  soccer_layer.h
src/nimbro/behaviour/soccer_behaviour/include/soccer_behaviour/soccer_manager/: soccer_manager.h
src/nimbro/behaviour/soccer_behaviour/src/: soccer_behaviour.cpp
src/nimbro/behaviour/soccer_behaviour/src/control_layer/: control_head.cpp  control_layer.cpp  dribble.cpp  game_control.cpp  go_behind_ball.cpp  kick.cpp  scoop_kick.cpp  search_for_ball.cpp
src/nimbro/behaviour/soccer_behaviour/src/ros_interface_layer/: ros_interface_layer.cpp
src/nimbro/behaviour/soccer_behaviour/src/soccer_layer/: play_soccer.cpp  soccer_layer.cpp
src/nimbro/behaviour/soccer_behaviour/src/soccer_manager/: soccer_manager.cpp
src/nimbro/cv/calibration/: CMakeLists.txt  calibellipse.cpp  calibration.cpp  calibration.h  calibrationnodelet.cpp  calibrationnodelet.h  calibscene.cpp  cameraparamswidget.cpp  cameraparamswidget.h  manifest.xml  nodelet_plugins.xml  package.xml
src/nimbro/cv/calibration/launch/: objects.calib
src/nimbro/cv/calibration/launch/objects/: Black.calib  Objects.calib  White.calib
src/nimbro/cv/camera_ueye/: CMakeLists.txt  camera_ueye.cpp  camera_ueye.h  manifest.xml  nodelet_plugins.xml
src/nimbro/cv/camera_ueye/launch/: camera_ueye.launch
src/nimbro/cv/camera_v4l2/: CMakeLists.txt  camera_v4l2.cpp  camera_v4l2.h  configmanager.cpp  configmanager.h  manifest.xml  nodelet_plugins.xml  package.xml
src/nimbro/cv/soccer_vision/: CMakeLists.txt  Objects.lut  package.xml
src/nimbro/cv/soccer_vision/launch/: cvbag.launch
src/nimbro/cv/soccer_vision/src/: camera_parameters.cpp  findBall.cpp  findLandmarksAndLines.cpp  soccer_vision.cpp  soccer_vision.h
src/nimbro/motion/gait/: CMakeLists.txt  package.xml  plugin.xml
src/nimbro/motion/gait/msg/: GaitCommand.msg  GaitPerformance.msg
src/nimbro/motion/gait/src/: gait.cpp  gait.h
src/nimbro/motion/gait/src/configclient/: configclient.cpp  configitem.cpp
src/nimbro/motion/gait/src/gaitcode/: Command.cpp  Command.h  Config.cpp  Config.h  RobotControlThread.cpp  RobotControlThread.h  State.cpp  State.h  globals.h
src/nimbro/motion/gait/src/gaitcode/RobotControl/: Action.h  Percept.h  RobotControl.cpp  RobotControl.h
src/nimbro/motion/gait/src/gaitcode/RobotControl/MotionLayer/: DynamicGait.cpp  (+13 more)
src/nimbro/motion/gait/src/gaitcode/RobotModel/: RobotModel.cpp  RobotModel.h
src/nimbro/motion/gait/src/gaitcode/util/: GLlib.cpp  GLlib.h
src/nimbro/motion/gait/srv/: SetOdom.srv
src/nimbro/tools/trajectory_editor/: CMakeLists.txt  package.xml  test.yaml
src/nimbro/tools/trajectory_editor/src/: invkinbox.cpp  invkinbox.h  invkinbox.ui  jointdisplay.cpp  jointdisplay.h  jointdisplay.h~  keyframemodel.cpp  keyframemodel.h  leg_ik.cpp  leg_ik.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotdisplay.cpp  robotdisplay.h  rvizwidget.cpp  rvizwidget.h
src/nimbro/tools/udp_hinter/: CMakeLists.txt  README.dox  package.xml
src/nimbro/tools/udp_hinter/src/: genconf.sh  udp_hinter.cpp  udp_hinter_dummy.cpp
src/nimbro/tools/utilities/: CMakeLists.txt  package.xml
src/nimbro/tools/utilities/include/utilities/: markers.h  mathconv.h  plotting.h  rostiming.h  utilities.h
src/nimbro/tools/utilities/test/: utilities_test.cpp  utilities_test.test
src/nimbro_robotcontrol/contrib/rbdl/: CMakeLists.txt
src/nimbro_robotcontrol/contrib/rbdl/include/rbdl/: rbdl_parser.h  treestream.h
src/nimbro_robotcontrol/contrib/rbdl/src/: rbdl_parser.cpp  treestream.cpp
src/nimbro_robotcontrol/hardware/robotcontrol/: CMakeLists.txt  package.xml  plugin.xml
src/nimbro_robotcontrol/hardware/robotcontrol/action/: FadeTorque.action
src/nimbro_robotcontrol/hardware/robotcontrol/include/robotcontrol/: motionmodule.h  robotcontrol.h
src/nimbro_robotcontrol/hardware/robotcontrol/include/robotcontrol/hw/: angleestimator.h  compassfilter.h  dummyinterface.h  hardwareinterface.h  robotinterface.h
src/nimbro_robotcontrol/hardware/robotcontrol/include/robotcontrol/model/: golay.h  joint.h  kalmanfilter.h  robotmodel.h  singlesupportmodel.h
src/nimbro_robotcontrol/hardware/robotcontrol/include/robotcontrol/motion_utils/: trunk_stabilizer.h
src/nimbro_robotcontrol/hardware/robotcontrol/msg/: CompassHeading.msg  Diagnostics.msg  LEDCommand.msg  ServoDiag.msg  State.msg
src/nimbro_robotcontrol/hardware/robotcontrol/src/: motionmodule.cpp  robotcontrol.cpp
src/nimbro_robotcontrol/hardware/robotcontrol/src/hw/: angleestimator.cpp  compassfilter.cpp  dummyinterface.cpp  robotinterface.cpp
src/nimbro_robotcontrol/hardware/robotcontrol/src/model/: golay.cpp  joint.cpp  kalmanfilter.cpp  robotmodel.cpp  singlesupportmodel.cpp
src/nimbro_robotcontrol/hardware/robotcontrol/src/motion_utils/: trunk_stabilizer.cpp
src/nimbro_robotcontrol/hardware/robotcontrol/test/: test_golay.cpp
src/nimbro_robotcontrol/hardware/rviz_dynamics/: CMakeLists.txt  package.xml
src/nimbro_robotcontrol/hardware/rviz_dynamics/include/rviz_dynamics/: torquedisplay.h
src/nimbro_robotcontrol/hardware/rviz_dynamics/src/: torquedisplay.cpp
src/nimbro_vis/plot_msgs/: CMakeLists.txt  package.xml
src/nimbro_vis/plot_msgs/msg/: Plot.msg  PlotPoint.msg
src/nimbro_vis/timewarp/: CMakeLists.txt  README.md  package.xml
src/nimbro_vis/timewarp/include/timewarp/: tfhandler.h  timeextractor.h  timewarpnode.h  topichandler.h
src/nimbro_vis/timewarp/src/: tfhandler.cpp  timewarpnode.cpp  topichandler.cpp  topicthread.cpp
(+214 files in other folders)
