<?xml version="1.0"?>
<package>
  <name>trajectory_editor</name>
  <version>0.0.0</version>
  <description>The trajectory_editor package</description>

  <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rbdl</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>motion_player</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rbdl</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>motion_player</run_depend>
  <export>
  </export>
</package>