<?xml version="1.0"?>
<package>
	<name>udp_hinter</name>
	<version>0.0.0</version>
	<description>Preloader to use UDP per default</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<export>
	</export>
</package>